--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                   <li class="mb-3">
                     <div class="d-flex gap-3">
                       <div class="icon">
-                        <i class="text-primary fa-solid fa-plus"></i>
+                        <i class="text-primary fa-solid fa-circle"></i>
                       </div>
-                      <div class="contentList text-primary">
+                      <div class="contentList">
                         Founded in [ ],Transamerica has been selling burial
                         insurance for [ ] year
                       </div>
@@ -170,9 +170,9 @@
                   <li class="mb-3">
                     <div class="d-flex gap-3">
                       <div class="icon">
-                        <i class="text-primary fa-solid fa-plus"></i>
+                        <i class="text-primary fa-solid fa-circle"></i>
                       </div>
-                      <div class="contentList text-primary">
+                      <div class="contentList">
                         "A" (Excellent) financial strength rating from A.M. Best
                       </div>
                     </div>
@@ -180,9 +180,9 @@
                   <li class="mb-3">
                     <div class="d-flex gap-3">
                       <div class="icon">
-                        <i class="text-primary fa-solid fa-plus"></i>
+                        <i class="text-primary fa-solid fa-circle"></i>
                       </div>
-                      <div class="contentList text-primary">
+                      <div class="contentList">
                         Offers burial insurance to Americans ages 0-85 in all
                         states except New York
                       </div>
@@ -216,7 +216,7 @@
                   <div class="icon-circle">
                     <i class="fa-solid fa-person-circle-check text-primary"></i>
                   </div>
-                  <p class="mt-2 card-info-title fw-bold text-primary">
+                  <p class="mt-2 card-info-title fw-bold">
                     Ages <br />
                     0 - 85
                   </p>
@@ -227,7 +227,7 @@
                   <div class="icon-circle">
                     <i class="fa-solid fa-sack-dollar text-primary"></i>
                   </div>
-                  <p class="mt-2 card-info-title fw-bold text-primary">
+                  <p class="mt-2 card-info-title fw-bold">
                     Coverage from <br />
                     $1,000 to $50,000
                   </p>
@@ -238,7 +238,7 @@
                   <div class="icon-circle">
                     <i class="fa-solid fa-map-location-dot text-primary"></i>
                   </div>
-                  <p class="mt-2 card-info-title fw-bold text-primary">
+                  <p class="mt-2 card-info-title fw-bold">
                     Available in all states <br />
                     except New York
                   </p>
